[gd_scene load_steps=6 format=2]

[ext_resource path="res://player/1.png" type="Texture" id=1]
[ext_resource path="res://player/heart_script.gd" type="Script" id=2]
[ext_resource path="res://player/snd_hitcar.ogg" type="AudioStream" id=3]

[sub_resource type="Animation" id=2]
resource_name = "damage"
length = 2.0
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("HeartSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3125, 0.625, 0.9375, 1.25, 1.5625, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.403922, 0.0901961, 0.0901961, 1 ), Color( 1, 1, 1, 1 ), Color( 0.403922, 0.0901961, 0.0901961, 1 ), Color( 1, 1, 1, 1 ), Color( 0.403922, 0.0901961, 0.0901961, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="CircleShape2D" id=1]
radius = 7.28011

[node name="Heart" type="Area2D"]
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/damage = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1 )
shape = SubResource( 1 )

[node name="HeartSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="SoundDamage" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[connection signal="area_entered" from="." to="." method="_on_Heart_area_entered"]
[connection signal="health_changed" from="." to="." method="_on_Heart_health_changed" binds= [ 0 ]]
